--- a/Tweeeter/Supporting Files/Base.lproj/Main.storyboard
+++ b/Tweeeter/Supporting Files/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Iac-To-hOP" kind="relationship" relationship="rootViewController" id="7kc-Vg-EQ3"/>
+                        <segue destination="L7m-8X-dNN" kind="relationship" relationship="rootViewController" id="E8o-5p-wGk"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qcc-zh-PAq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -27,20 +26,39 @@
             <point key="canvasLocation" x="-358" y="-123"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="hXI-R5-NCv">
+        <scene sceneID="liu-io-PjW">
             <objects>
-                <viewController id="Iac-To-hOP" customClass="ViewController" customModule="Tweeeter" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="C5L-Ct-c8V">
+                <collectionViewController id="L7m-8X-dNN" customClass="ViewController" customModule="Tweeeter" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="wqJ-8n-QQi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="Hpb-vu-aSW"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="gyn-PH-VxE"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7F7-SE-AHt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3nh-8N-hJz">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="PEZ-8t-FZS">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="L7m-8X-dNN" id="aLT-IB-Uxc"/>
+                            <outlet property="delegate" destination="L7m-8X-dNN" id="MEc-Qw-aVf"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="FQU-YJ-rlp"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Aex-om-PQd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="357" y="-124"/>
+            <point key="canvasLocation" x="352" y="-121"/>
         </scene>
     </scenes>
 </document>
